   * Add "File type associations" in Options - Settings
   * Add "waveform-multi-move" with Ctrl+mouse-move
   * Add shortcuts for Tools - Sort By - thx Jolana
   * Add shortcut for re-calc duration to min - thx m0ck69
   * Add shortcut for edit of bookmark - thx OmrSi
   * Add shortcut for copy plain text - thx OmrSi
   * Add "Sort by Gap" - thx Andrebavila
   * New image subtitle format TTML with inline base64 images - thx mat
   * New text subtitle format - thx Richard
   * Add new json subtitle format - thx Tim
* IMPROVED:
   * Update Bulgarian translation - thx Калин
   * Update Italian translation - thx NAMP/bovirus
   * Update Brazilian Portuguese translation - thx Igor
   * Update Portuguese translation - thx hugok79
   * Update Polish translation - thx admas
   * Update Chinese translation - thx nkh0472
   * Update Finnish translation - thx Teijo S
   * Update Spanish translations (es-ES/ex-MX/es-AR) - thx paconaranjo
   * Update Korean translation - thx domddol
   * Update Vietnamese translation - thx MMT Gouenji Tech
   * Update Persian translation - thx abdollahim
   * Update French translation - thx Pierre
   * Update file association icons (so nice) in installer - thx Leon
   * Improve VTT parsing of malformed files - thx Leon
   * Handle merge/split better with "box" tag
   * Improve zoom-in for waveform a little - thx vitacon
   * Trying to make nOCR work better with corrupted files - thx k7Up
   * Improve English/Italian OCR rules a little - thx tormento
   * Allow larger font size in list view / text box - thx OmrSi
   * Improve list-view/text-box color dialog - thx Majid
   * Improve spell check regarding Yen symbol (¥) - thx Dnkhatri
   * Add Nvidia hardware accel encodings for sub burn-in - thx Leon
   * Remove position codes when reading PAC - thx Ernest
   * Allow .m4s as sub file extension - thx farside
   * SE now works with new libmpv (mpv-2.dll) - thx OmrSi
   * Minor improvements for ASSA properties window